# strongsnake

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/snake-ai/: Cargo.toml
crates/snake-ai/src/: bitboard.rs  brain.rs  config.rs  floodfill.rs  grid.rs  heuristics.rs  lib.rs  model.rs  pathfinding.rs  search.rs  tt.rs  voronoi.rs  zobrist.rs
crates/snake-api/: Cargo.toml
crates/snake-api/src/: lib.rs
crates/snake-domain/: Cargo.toml
crates/snake-domain/src/: direction.rs  engine.rs  food.rs  lib.rs  rng.rs  types.rs
crates/snake-io/: Cargo.toml
crates/snake-io/src/: lib.rs  scenario.rs  sfen.rs
data/scenarios/: scenario_1770420738568.json  scenario_1770422406199.json  scenario_1770422451060.json  scenario_1770422484002.json  scenario_1770668540944.json  scenario_1770670207096.json  scenario_1770681681409.json  scenario_1770681704101.json  scenario_1771562808370.json  scenario_1771610461223.json  scenario_1771632897001.json  scenario_1771632897002.json  scenario_1771725743528.json  scenario_1771734005785.json  scenario_1771736922377.json  scenario_1771739662220.json  scenario_1771767058845.json  test_case_10.json  test_case_11.json  test_case_12.json  test_case_14.json  test_case_15.json  test_case_16.json  test_case_17.json  test_case_18.json  test_case_19.json  test_case_2.json  test_case_20.json  test_case_21.json  test_case_22.json  test_case_23.json  test_case_24.json  test_case_25.json  test_case_26.json  test_case_27.json  test_case_28.json  test_case_29.json  test_case_3.json  test_case_30.json  test_case_31.json  (+15 more)
src/: main.rs  server.rs
src/gui/: app.rs  mod.rs  server.rs  state.rs  worker.rs
src/gui/panels/: dialogs.rs  mod.rs  tabs.rs
src/gui/playground/: board.rs  mod.rs  scenario.rs
src/services/: arena.rs  common.rs  mod.rs  regression.rs  util.rs
src/services/arena/: report.rs  runner.rs  snapshot.rs  stats.rs  types.rs
src/services/trainer/: eval.rs  genes.rs  matchups.rs  mod.rs  types.rs
