[package]
name = "snake-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snake-domain = { version = "0.1.0", path = "../snake-domain" }
thiserror = "2.0.18"
